WendzelNNTPd ChangeLog:

----------------- version 2.x ------------------
2.1.0-beta "Sydney" : ??-???-201?
 ADDED_FEATURES:
 - Finally, passwords are saved using a hash function (SHA-256).
 
****** TODO: add configurable salt for pw hashing

2.0.9-stable "Bergen, Christmas Releae 2017" : 18-Dec-2017
 FIXES:
 - 'configure' script did not check whether the `install' tool is
   present. The tool's presence is now also checked.
 MISC:
 - Old RFC 850 mentions YY (two-digit) yearly format. However, INNd
   uses YYYY (four-digit) yearly format. WendzelNNTPd now does the
   same.
 - Tiny code cleanup (removed two doubled prototype definitions).
 - Ran WendzelNNTPd with lib efence, just to see whether memory leaks
   would be detected. Executed (hopefully) all possible NNTP commands.
   No memory leaks were revealed. However, tested only Sqlite3 setup,
   not MySQL.

2.0.8-stable "Oslo" : 31-Jan-2017
 ADDED_FEATURES:
 - *BSD support: Add comment how to install WendzelNNTPd under FreeBSD
   and other BSD derivates in documentation and also adjust the Makefile
   accordingly since group `root' is called `wheel' there. Now use "0:0"
   instead of "root:root" in install/upgrade targets of the Makefile.
 MISC:
 - Slight improvement of the documentation (how to start/stop/restart
   the service and how to install the startup script) and in the expla-
   nation of the default config file (wendzelnntpd.conf).
 - Slight improvement of help output and comments in configure script
   and Makefile.
 - Tiny code e-mail address clean-up

2.0.7-stable "Berlin" : 26-Oct-2015
 FIXES:
 - If an XHDR command is requested for a header that is either not
   present or not implemented, return code 221 instead of 211 (this is
   conforming to RFC 2980).
 MISC:
 - Improve error reporting for chk_file_sec() as it can also return -1
   if a file does not exist.
 - Some tiny code cleanups

2.0.6-stable "Miami" : 26-Sep-2015
 ADDED_FEATURES: