@@ -23,12 +23,22 @@
 #define SHA256_LEN 64 /* 32 bytes * 8 bits = 256 bits;
 		       * however, coded as 4-bit hex-tuples makes 64 Bytes */
 
+void bzero_and_free_sensitive_strings(char *str_1, char *str_2, char *str_3)
+{
+	if (str_1) { bzero(str_1, strlen(str_1)); free(str_1); }
+	if (str_2) { bzero(str_2, strlen(str_2)); free(str_2); }
+	if (str_3) { bzero(str_3, strlen(str_3)); free(str_3); }
+}
+
 char *get_sha256_hash_from_str(char *str)
 {
 	int i;
 	MHASH td;
 	char *hash = NULL;
 	char *hash_raw = NULL;
+	char * str_plus_salt = NULL;
+	extern char *hash_salt;
+	int len_str_plus_salt;
 	
 	/* because we allocate only half the bytes for the binary value but
 	 * all the bytes for the hex value, see below */
@@ -39,25 +49,33 @@ char *get_sha256_hash_from_str(char *str)
 	if (!(hash_raw = calloc(SHA256_LEN + 1, 1)))
 		return NULL;
 	
+	len_str_plus_salt = strlen(str) + strlen(hash_salt);
+	if (!(str_plus_salt = calloc(len_str_plus_salt + 1, 1)))
+		return NULL;
+	
 	bzero(hash, SHA256_LEN + 1);
 	bzero(hash_raw, SHA256_LEN + 1);
+	bzero(str_plus_salt, len_str_plus_salt + 1);
+	
+	/* combine salt and password */
+	snprintf(str_plus_salt, len_str_plus_salt, "%s%s", hash_salt, str);
 	
 	if ((td = mhash_init(MHASH_SHA256)) == MHASH_FAILED) {
-		//free(hash); free(hash_raw);
+		bzero_and_free_sensitive_strings(hash, hash_raw, str_plus_salt); /* overwrite with zeros */
 		DO_SYSL("mhash_init() returned MHASH_FAILED. Aborting connection.")
 		return NULL;
 	}
 	
 	/* mhash() always returns MUTILS_OK in the library's code, i.e. no
 	 * error checking necessary. */
-	mhash(td, str, strlen(str));
+	mhash(td, str_plus_salt, len_str_plus_salt);
 	/* mhash_deinit() returns void, so no checking here either */
 	mhash_deinit(td, hash_raw);
 	
 	for (i = 0; i < SHA256_LEN/2; i++) {
 		snprintf(hash + (2 * i), 4, "%.2x", hash_raw[i]);
 	}
-	free(hash_raw);
+	bzero_and_free_sensitive_strings(hash_raw, str_plus_salt, NULL); /* overwrite with zeros */
 	return hash;
 }
 
