@@ -56,3 +56,13 @@ listen	127.0.0.1
 ; the message ID generated by WendzelNNTPd (what is the default
 ; case). Uncomment `enable-anonym-mids' to enable this feature.
 ;enable-anonym-mids
+
+; This keyword defines a salt to be used in conjunction with the
+; passwords to calculate the cryptographic hashes. The salt must
+; be in the form [a-zA-Z0-9.:\/-_]+.
+; ATTENTION: If you change the salt after passwords have been
+; stored, they will be rendered invalid! If you comment out
+; hash-salt, then the default hash salt defined in the source
+; code will be used.
+hash-salt 0.hG4//3baA-::_\
+
